testsuite/bsc.typechecker/typeclasses/examples/pipeline/Tb1.bsv.bsc-out.expected
checking package dependencies
compiling ./Pipeline1.bsv
compiling Tb1.bsv
Error: "Tb1.bsv", line 7, column 33: (T0033)
  There is not enough explicit type information to deduce the types of all
  expressions. Consider adding more type declarations to help resolve this
  ambiguity.
    An ambiguous type was introduced at "Tb1.bsv", line 9, column 17
    This type resulted from:
      Bits#() proviso introduced (for bit vector packing/unpacking) in or at
      the following locations:
	"Tb1.bsv", line 9, column 17
    An ambiguous type was introduced at "Tb1.bsv", line 10, column 17
    This type resulted from:
      Bits#() proviso introduced (for bit vector packing/unpacking) in or at
      the following locations:
	"Tb1.bsv", line 10, column 17
    An ambiguous type was introduced at "Tb1.bsv", line 11, column 9
    This type resulted from:
      Bits#() proviso introduced (for bit vector packing/unpacking) in or at
      the following locations:
	"Tb1.bsv", line 11, column 9
      The proviso Has_tpl_2#(g__, e__) introduced in or at the following
      locations:
	"Tb1.bsv", line 11, column 25
